--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "daisyui": "^2.51.3",
     "postcss": "^8.4.21",
     "react-icons": "^4.7.1",
     "tailwindcss": "^3.2.7"
