--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.51.3",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "react-icons": "^4.7.1",
     "tailwindcss": "^3.2.7"
   }
