--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-lottie": "^1.2.3",
     "react-scroll": "^1.8.9",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@formspree/react": "^2.5.1",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.51.3",
+    "libphonenumber-js": "^1.10.41",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
