--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@formspree/react": "^2.5.1",
+    "@types/react-outside-click-handler": "^1.3.1",
     "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.51.3",
@@ -35,6 +36,7 @@
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
     "react-icons": "^4.10.1",
+    "react-outside-click-handler": "^1.3.0",
     "tailwindcss": "^3.2.7"
   }
 }
