--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/react-lottie": "^1.2.6",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "i18next": "^23.5.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.2.2",
     "react-scroll": "^1.8.9",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
