--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@supabase/supabase-js": "^2.39.8",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-lottie": "^1.2.6",
+    "dotenv": "^16.4.5",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "i18next": "^23.5.1",
